<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--app name and copyright-->
    <string name="app_name">WebDroid</string>
    <string name="app_copyright">Copyright &#169; 2022 Solodroid Developer \n All rights reserved</string>
    <string name="share_text">I Would like to share this WebDroid - Android WebView App with you. Here You Can Download This Application from PlayStore</string>

    <!--networks and permissions-->
    <string name="exit_msg">Press again to exit</string>
    <string name="msg_download">Downloading&#8230;</string>
    <string name="msg_page_not_found">Page not found!</string>
    <string name="failed_title_text">Whoops!</string>
    <string name="btn_retry">RETRY</string>
    <string name="failed_text">There is a problem with your network or the server is down, try again later.</string>
    <string name="permission_read_external_storage">Permission to read files is required</string>
    <string name="permission_write_external_storage">Permission to write files is required</string>
    <string name="permission_access_location">Permission to access your location is required</string>
    <string name="permission_camera">Permission to access your camera is required</string>

    <!--popup menu-->
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate">Rate us</string>
    <string name="menu_more">More apps</string>
    <string name="menu_about">About</string>

    <!--app deep link-->
    <string name="app_deep_link_host">solodroid.net</string>
    <string name="app_deep_link_path" translatable="false">/webdroid</string>

    <!--settings and others-->
    <string name="txt_title_settings">Settings</string>
    <string name="title_settings_theme">Dark Theme</string>
    <string name="sub_title_settings_theme">Better for eyesight and battery life</string>
    <string name="msg_please_wait">Please wait&#8230;</string>
    <string name="title_setting_notification">Push Notification</string>
    <string name="sub_title_setting_notification">Manage push notification settings</string>
    <string name="title_setting_clear_cache">Clear Cache</string>
    <string name="sub_setting_clear_cache_start">Free up</string>
    <string name="sub_setting_clear_cache_end">of space</string>
    <string name="title_setting_privacy">Privacy Policy</string>
    <string name="title_setting_share">Share</string>
    <string name="title_setting_rate">Rate us</string>
    <string name="title_setting_more_apps">More apps</string>
    <string name="title_setting_about">About</string>
    <string name="msg_about_version">Version</string>
    <string name="msg_clearing_cache">Clearing cache</string>
    <string name="msg_clear_cache">Are you sure want to clear cache?</string>
    <string name="msg_cache_cleared">cache has been cleared</string>
    <string name="msg_cancel_update">Update canceled</string>
    <string name="msg_success_update">Update success!</string>
    <string name="msg_failed_update">Update Failed!</string>

    <!--dialog option menu-->
    <string name="dialog_option_ok">OK</string>
    <string name="dialog_option_yes">YES</string>
    <string name="dialog_option_cancel">Cancel</string>

    <!--exit dialog-->
    <string name="msg_dialog_exit">Thank you for using our app, please support us by giving your rating and review or share with your friends.</string>
    <string name="btn_rate_us">Rate Us</string>
    <string name="btn_share">Share</string>
    <string name="btn_quit">Quit</string>

</resources>
